# moldqueen

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.client  LICENSE  README.md  THIRD-PARTY-NOTICES.md  WORKBOARD.md  hello.py
.claude/: settings.json
.claude/agents/: android-core-dev.md  (+9 more)
.github/: FUNDING.yml
android-core/: .gitignore  README.md  build.gradle  keystore.properties.example  settings.gradle
bt-core/: CLAUDE.md  requirements.txt  test_radio_worker.py
client/: README.md  serve.py
config/: channel_map.excavator.json  channel_map.json  channel_map.template.json
deploy/: nginx-client.conf
dev-docs/: ADDING_A_LAYOUT.md  ANDROID.md  DEV_CLIENT.md  ESP32_SETUP.md  GAMEPAD.md  HANDOVER.md  MIXED_MODE.md  PORTING.md  PROJECT.md  QUICKSTART.md  REMOTE_CLIENT.md  ROADMAP.md  SCREENSHOTS.md
docs/: ADDING_A_LAYOUT.md  DEV_CLIENT.md  HANDOVER.md  PORTING.md  PROJECT.md  QUICKSTART.md  REMOTE_CLIENT.md  index.html  inspiration.html  llms.txt  mould_king_13112_hmi_layout_spec.md  privacy.html  site.js  styles.css
esp32-core/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32-core/main/: CMakeLists.txt  idf_component.yml  main.c  wifi_secrets.h.example
java-core/: CLAUDE.md  build.gradle  gradle.properties
linux-core/: CLAUDE.md  README.md  pytest.ini  radio_worker.py  requirements.txt  test_api_protocol.py  test_broadcaster_interleave.py  test_mouldking_crypt.py  test_protocol.py
scripts/: check.sh  mdns.sh  moldqueen-mdns.service  start.sh
web-gui/: CLAUDE.md  package-lock.json  package.json  server.js
(+145 files in other folders)
